--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -2,18 +2,22 @@ $color1:#000;
 $color2:#fff;
 $color3:#b0cad3;
 $color4:#b7b7b7;
-$color5:#00b4a9;
+// $color5:#00b4a9;
+$color5:#007a8a;
 $color6:#a7a7a7;
-$color7:#00ffef;
+// $color7:#00ffef;
+$color7:#00aec7;
 $color8:#c0c0c0;
 $color9:#13242b;
 $color10:#46fff3;
 $color11:#00b3a8;
 $color12:#03151b;
 $color13:#c2ced2;
-$color14:#00feee;
+// $color14:#00feee; news
 $color15:#5c6d72;
 $color16:#00dbce;
-$color17:#00c1b5;
-$color18:#00d1c5;
+// $color17:#00c1b5; about
+// $color18:#00d1c5; advantages
 $color19:#bdcaca;
+$color20: #00ffef;
+$color21: #00828d;
