--- a/app/scss/_responsive-pages.scss
+++ b/app/scss/_responsive-pages.scss
@@ -907,7 +907,7 @@
 					display: block;
 					position: absolute;
 					height: 38px;
-					border-right: 1px solid #00b4a9;
+					border-right: 1px solid $color5;
 					right: 0;
 					top: -12px;
 				}
