--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -46,7 +46,7 @@
 			text-transform: uppercase;
 			&:after{
 				@extend .before;
-				border-bottom: 1px solid #00b4a9;
+				border-bottom: 1px solid $color5;
 				width: 105px;
 				bottom: 0;
 				left: 0;
@@ -66,7 +66,7 @@
 				&:before,
 				&:after{
 					@extend .before;
-					border-color: #00b4a9;
+					border-color: $color5;
 				}
 				&:before{
 					height: 100%;
